--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-plugin-fastrde-checkgps" version="0.9.9">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="it.creativeprogramming.plugins.checkGPS" version="0.9.9">
 	<name>checkGPS</name>
 	<author>Fabian Strachanski</author>
 	<description>check if GPS is enabled on Android and iOS</description>
